# themed-styler

./: .gitignore  .npmignore  Cargo.toml  PLAN.md  README.md  THEME.md  package.json  theme.yaml  tsconfig.json  types.d.ts
.github/: copilot-instructions.md
android/: build.gradle  index.android.ts  index.native.ts  nativeThemedStyler.native.ts  settings.gradle  themedPrimitives.native.tsx  themedRuntime.ts
android/components/: TSDiv.native.tsx
android/specs/: NativeThemedStyler.ts
android/src/main/: AndroidManifest.xml
android/src/main/java/com/relay/client/: StyleCache.java  ThemedStylerModule.java
android/utils/: themedStyled.ts
docs/: relay_project_vision.md
scripts/: build-android.sh
shared/: themedStylerBridge.ts  unifiedBridge.ts
shared/utils/: themedMapper.ts
src/: android.rs  android_jni.rs  bridge_common.rs  color.rs  default_state.rs  ffi.rs  index.native.ts  index.ts  ios_ffi.rs  lib.rs  shorthands.rs  styleManager.ts  tailwind.rs  tests.rs  theme.rs  theme.ts  themedStylerBridge.ts  units.rs  utils.rs  wasm.rs  web.rs
src/components/: TSDiv.native.tsx  TSDiv.tsx
tests/: array_transpile.rs  es_modules.rs  home_jsx.rs  map_transpile.rs  repro_home.rs  ts_transpile.rs
tests/android/: MINIMAL_TEST_APP.md  README.md  build-hook-renderer.sh  build.gradle  gradle.properties  logs.txt  settings.gradle
tests/android/app/: build.gradle
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/assets/: act-android.bundle.js  act.js  advanced-test.jsx  app-theme.yaml  breakpoint-demo.jsx  hook-renderer.js  lazy-data.js  react.production.min.js  renderer.js  repro-issue.jsx  rn-parity.jsx  simple-hook.jsx  test-hook.jsx  theme.yaml
tests/android/app/src/main/assets/components/: list-item.jsx
tests/android/app/src/main/assets/nested/: data.js
tests/android/app/src/main/res/layout/: activity_jni_test.xml  activity_main.xml  fragment_local_hook.xml
tests/android/node_modules_stubs/: yaml.js
tests/android/scripts/: dev-server.cjs  start-dev.sh
tests/android/styler/relay/test/: HookRendererAssetTest.kt  ScopeEdgeCaseTest.kt
tests/android/styler/test/: ActInstrumentationTest.kt  TranspilerJNITest.kt
tests/fixtures/: home_original.jsx  map_test.jsx
tests/web/: cypress.config.js  package.json  server.js  server.out
tests/web/cypress/e2e/: operators.cy.js  static_import.cy.js  transpilation.cy.js
tests/web/public/: index.html  test-app.bundle.js  test-app.js
tests/web/public/hooks/: breakpoint-demo.jsx  lazy-data.js  ns-helper.js  rn-parity.jsx  sample-data.js  static-import-test.jsx  string-keywords-test.jsx  style-keywords-test.jsx  test-hook.jsx
tests/web/public/hooks/dir/: index.js
wasm/: themed_styler.d.ts  themed_styler.js  themed_styler.manifest.json  themed_styler_bg.js  themed_styler_bg.wasm  themed_styler_bg.wasm.d.ts
web/: index.ts  styleManager.ts  themedPrimitives.tsx  themedRuntime.ts
web/components/: TSDiv.tsx
(+30 files in other folders)
