[package]
name = "themed-styler"
version = "1.2.9"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Client-side runtime styling engine for web and Android/iOS Native with theme support and Tailwind subset"
authors = ["Ari Asulin"]
repository = "http://github.com/clevertree/themed-styler"
homepage = "https://relaynet.online"

readme = "README.md"
keywords = ["theme", "styling", "android-ios-native", "wasm"]
categories = ["wasm", "gui", "rendering"]
exclude = [
	# JavaScript/TypeScript and npm artifacts
	"dist/**",
	"pkg/**",
	"wasm/**",
	"src/**/*.ts",
	"src/**/*.tsx",
	"src/**/*.js",
	"package.json",
	"package-lock.json",
	"tsconfig.json",
	"node_modules/**",
	
	# Development and testing
	"tests/**",
	"scripts/**",
	"docs/**",
	"media/**",
	"assets/**",
	"android/**",
	"ios/**",
	"target/**",
	"theme.yaml",
	
	# CI/CD and Git
	".github/**",
	".git/**",
	".gitignore",
	
	# IDE and OS
	".idea/**",
	".vscode/**",
	"*.tgz",
]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
wasm = ["wasm-bindgen"]
android = ["jni"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
thiserror = "1"
anyhow = "1"
libc = "0.2"
log = "0.4"
android_logger = "0.13"
wasm-bindgen = { version = "0.2", optional = true }
jni = { version = "0.21", optional = true }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
